# tr2zwo

./: .gitignore  MANIFEST.in  README.md  dodo.py  fetch_workout.py  parse_workout.py  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  trfetch.py
etc/: PYTHON
notebooks/: BuildWorkout.ipynb  CheckData.ipynb
src/: tr2zwift  tr2zwo  trworkout.py
src/tr2zwo/: __init__.py  cli.py  gui.py  interval.py  trconfig.py  trfetch.py  trworkout.py  workout.py  workoutitem.py
test/: test_interval.py  test_workout.py  test_workout_item.py
