[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]

[project]
name = "tr2zwo"
dynamic = [
  "version",
  "authors",
  "description",
  "readme",
  "license",
  "urls",
  "dependencies",
]

[project.scripts]
tr2zwift = "tr2zwo.cli:main"
tr2zwift-gui = "tr2zwo.gui:main"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]
line-length = 80
indent-width = 2

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"

[tool.pyright]
venv = "3.12"
venvPath = ".."
