[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]

[project]
name = "tr2zwo"
dynamic = ["version", "authors", "description", "readme", "license", "urls"]
requires-python = "~=3.11"
dependencies = [
  "keyring",
  "ujson>=5.10.0",
  "httpx>=0.27.0",
  "msgspec>=0.18.6",
  "wxpython>=4.2.1",
  "beautifulsoup4>=4.12.3",
  "lxml>=5.3.0",
]

[project.scripts]
tr2zwo = "tr2zwo.cli:main"
tr2zwo-gui = "tr2zwo.gui:main"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]
line-length = 80
indent-width = 2

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"

[tool.pyright]
venv = ".venv"

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.2",
  "ipdb>=0.13.13",
  "mypy>=1.11.1",
  "fixit>=2.1.0",
  "ruff>=0.6.1",
  "pyright>=1.1.376",
  "watchdog>=4.0.2",
  "setuptools>=72.2.0",
  "wheel>=0.44.0",
  "build>=1.2.1",
]
