[metadata]
name = tr2zwo
version = 1
url = https://github.com/puckdoug/tr2zwo
author = Doug Morris
author_email = doug@mhost.com
license = MIT
license_files = LICENSE
classifier = 
  License :: OSI Approved :: MIT License
description = "Convert TrainerRoad workouts into Zwift ZWO custom workout files"
long_description = file: README.md
long_description_content_type = text/markdown

[options]
pkg_dir =
  =src
packages = find:

[options.packages.find]
where = src
