[metadata]
name = tr2zwo
version = 1
url = https://github.com/puckdoug/tr2zwo
author = Doug Morris
author_email = doug@mhost.com
license = MIT
license_files = LICENSE
classifier = 
  License :: OSI Approved :: MIT License
description = "Convert TrainerRoad workouts into Zwift ZWO custom workout files"
long_description = file: README.md
long_description_content_type = text/markdown

[options]
pkg_dir =
  =src
packages = find:

install_required = 
  httpx
  keyring
  ujson
  msgspec

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
  tr2zwo = tr2zwo.cli:main

[tool:pytest]
testpaths = 
  test
